--- a/ReproductorDeMusica/.classpath
+++ b/ReproductorDeMusica/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/ProyectoCineElorrieta/librerias/mysql-connector-java-5.1.38-bin.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JDBC">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
